/* 
  Localizable.strings
  FeedbackAssistant

  Created by Rashid KC on 20/11/23.
  
*/

/* GENERAL STRINGS */
"OK" = "OK";
"Cancel" = "Cancel";
"Delete" = "Delete";
"Rename" = "Rename";
"Actions" = "Actions";



/* SIDEBARVIEW */
"Filters" = "Filters";
"Smart filters" = "Smart filters";
"All issues" = "All issues";
"Recent" = "Recent";
"Tags" = "Tags";
"Add tag" = "Add tag";
"Show awards" = "Show awards";

"Rename tag" = "Rename tag";
"New name" = "New name";



/* CONTENTVIEW */
"Issues" = "Issues";

/* A button that shows a menu with the following options */
"Filter" = "Filter";
"Turn filter on" = "Turn filter on"; /* Enables filtering */
"Turn filter off" = "Turn filter off"; /* Disables filtering */
"Sort By" = "Sort By"; /* Adjust the order issues are shown */
"Date Created" = "Date Created"; /* Sort issues by the date they were created */
"Date Modified" = "Date Modified"; /* Sort issues by the date they were last changed */
"Newest to Oldest" = "Newest to Oldest"; /* Place newer issues before older issues */
"Oldest to Newest" = "Oldest to Newest"; /* Place older issues before newer issues */

"All" = "All";
"Open" = "Open";
"Closed" = "Closed";

"Low" = "Low";
"Medium" = "Medium";
"High" = "High";

"No tags" = "No tags";

/* Create a new issue */
"New issue" = "New issue";

/* A text placeholder, to help users search */
"Filter issues" = "Filter issues";

/* Shown as a status for closed issues */
"CLOSED" = "CLOSED";



/* DETAILSVIEW */
"Details" = "Details";

/* NOISSUEVIEW */
"No issue selected" = "No issue selected";

/* ISSUEVIEW */
"Copy issue title" = "Copy issue title";
"Close issue" = "Close issue";
"Re-open issue" = "Re-open issue";

/* Fields that let the users enter details about a specific issue */
"Enter the issue title here" = "Enter the issue title here";
"**Modified:** %@" = "**Modified:** %@";
"**Status:** %@" = "**Status:** %@";
"Priority" = "Priority";
"Add Tags" = "Add Tags";
"Basic Information" = "Basic Information";
"Enter the description here" = "Enter the description here";



/* AWARDS VIEW */
"Awards" = "Awards";
"Locked" = "Locked";
"Unlocked: %@" = "Unlocked :@";



/* DATA */
"New tag" = "New tag";
"New issue" = "New issue";



/* DEBUG ONLY */
"Add samples" = "Add samples";
